# VisaBulletinScraper

./: LICENSE  README.md  VisaBulletin-201703.converted.csv  VisaBulletin-201703.csv  VisaBulletin.csv  VisaBulletinScraper.cabal  VisaBulletinUnpivoted.csv
app/: Main.hs
plotting/: plot.sh
plotting/gnuplot/: extract-for-gnuplot.pl  plot-script
plotting/google-charts/: charts.html  extract-for-google-charts.pl  google-charts.html
src/VisaBulletinScraper/: Scrapers.hs  Types.hs
