name:                VisaBulletinScraper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/harryxp/VisaBulletinScraper#readme
license:             BSD3
license-file:        LICENSE
author:              Harry Pan
maintainer:          pan.xingzhi@gmail.com
copyright:           2017 Harry Pan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable VisaBulletinScraper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , VisaBulletinScraper
                     , curl >= 1.3.8
                     , MissingH >= 1.4.0.1
                     , scalpel >= 0.5.0
                     , split >= 0.2.3.1
  default-language:    Haskell2010

test-suite VisaBulletinScraper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , VisaBulletinScraper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/harryxp/VisaBulletinScraper
